[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.8"
anyhow = "1.0.44"
base64 = "0.13.0"
bytes = "1.1.0"
image = "0.23.14"
lazy_static = "1.4.0"
lru = "0.7.0"
percent-encoding = "2.1.0"
photon-rs = "0.3.1"
prost = "0.9.0"
reqwest = "0.11.6"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] }
tower = { version = "0.4.10", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.1.1", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.1"

[build-dependencies]
prost-build = "0.9.0"
